# Algorithms-Bootstrap-Silver

./: CMakeLists.txt  README.md
src/: Algorithms-Bootstrap-Silver.cpp  CoreDefines.h  Cows.cpp  Cows.h  FileManager.cpp  FileManager.h
